# kortapp-z

./: AboutForm.cs  AppCard.cs  AppSearch.cs  AppStore.csproj  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DownloadItem.cs  DownloadManager.cs  ImageCompressorForm.cs  LICENSE  MainForm.cs  Program.cs  README.md  SECURITY.md  SettingsForm.cs  ThemeManager.cs  ToolCard.cs  WebSiteCards.cs  border_renderer.cpp  card_calculator.cpp  del.bat  log_cleaner.cpp  logger.cs  renexe.bat  statement.txt  zh-TW_README.md
.github/ISSUE_TEMPLATE/: bug反馈.md  功能建议.md  新功能添加请求🥰🥰🥰.md
.github/workflows/: dotnet-desktop.yml  dotnet.yml
README/: de-DE_README.md  en-US_README.md  fr-FR_README.md  ru-RU_README.md
TXT/: Build.txt  Run.txt
docs/: about.html  features.html  index.html  script.js  style.css
inno/: innosetup_x64.iss  innosetup_x86.iss
others/C++/Image_format_converter/: CMakeLists.txt  Makefile
others/C++/Image_format_converter/include/: avif_to_bmp.hpp  avif_to_jpeg.hpp  avif_to_jpg.hpp  avif_to_png.hpp  avif_to_tiff.hpp  avif_to_webp.hpp  bmp_to_avif.hpp  bmp_to_jpeg.hpp  bmp_to_jpg.hpp  bmp_to_png.hpp  bmp_to_tiff.hpp  bmp_to_webp.hpp  common.hpp  converter_base.hpp  gui_interface.hpp  image_loader.hpp  jpeg_to_avif.hpp  jpeg_to_bmp.hpp  jpeg_to_png.hpp  jpeg_to_tiff.hpp  jpeg_to_webp.hpp  jpg_to_avif.hpp  jpg_to_bmp.hpp  jpg_to_png.hpp  jpg_to_tiff.hpp  jpg_to_webp.hpp  png_to_avif.hpp  png_to_bmp.hpp  png_to_jpeg.hpp  png_to_jpg.hpp  png_to_tiff.hpp  png_to_webp.hpp  tiff_to_avif.hpp  tiff_to_bmp.hpp  tiff_to_jpeg.hpp  tiff_to_jpg.hpp  tiff_to_png.hpp  tiff_to_webp.hpp  webp_to_avif.hpp  webp_to_bmp.hpp  (+4 more)
others/C++/Image_format_converter/src/: avif_to_bmp.cpp  avif_to_jpeg.cpp  avif_to_jpg.cpp  avif_to_png.cpp  avif_to_tiff.cpp  avif_to_webp.cpp  bmp_to_avif.cpp  bmp_to_jpeg.cpp  bmp_to_jpg.cpp  bmp_to_png.cpp  bmp_to_tiff.cpp  bmp_to_webp.cpp  gui.cpp  image_loader.cpp  jpeg_to_avif.cpp  jpeg_to_bmp.cpp  jpeg_to_png.cpp  jpeg_to_tiff.cpp  jpeg_to_webp.cpp  jpg_to_avif.cpp  jpg_to_bmp.cpp  jpg_to_png.cpp  jpg_to_tiff.cpp  jpg_to_webp.cpp  main.cpp  png_to_avif.cpp  png_to_bmp.cpp  png_to_jpeg.cpp  png_to_jpg.cpp  png_to_tiff.cpp  png_to_webp.cpp  stb_impl.cpp  tiff_to_avif.cpp  tiff_to_bmp.cpp  tiff_to_jpeg.cpp  tiff_to_jpg.cpp  tiff_to_png.cpp  tiff_to_webp.cpp  utils.cpp  webp_to_avif.cpp  (+5 more)
others/C++/chat_room/: Makefile
others/C++/chat_room/include/: Application.hpp  ChatRoom.hpp  ChatWindow.hpp  ConfigManager.hpp  Constants.hpp  MainWindow.hpp  Message.hpp  MessageProtocol.hpp  NetworkEventHandler.hpp  NetworkManager.hpp  RoomInfo.hpp  StringUtils.hpp  User.hpp  UserManager.hpp
others/C++/chat_room/src/: Application.cpp  ChatRoom.cpp  ChatWindow.cpp  ConfigManager.cpp  MainWindow.cpp  Message.cpp  MessageProtocol.cpp  NetworkEventHandler.cpp  NetworkManager.cpp  RoomInfo.cpp  StringUtils.cpp  User.cpp  UserManager.cpp  main.cpp
others/C++/gcc_OCR/: Makefile
others/C++/gcc_OCR/include/: common.hpp  config.hpp  error_handler.hpp  file_io.hpp  gui_window.hpp  image_processor.hpp  ocr_engine.hpp  result_display.hpp  utils.hpp
others/C++/gcc_OCR/src/: error_handler.cpp  file_io.cpp  gui_window.cpp  image_processor.cpp  main.cpp  ocr_engine.cpp
others/C++/password_generator/: Makefile
others/C++/password_generator/include/: password_generator.hpp  string.hpp
others/C++/password_generator/src/: password_generator.cpp  password_gui.cpp  string.cpp
others/C++/stegano_project/: Makefile
others/C++/stegano_project/include/: CommonDefs.hpp  GUI.hpp  Steganography.hpp  ZeroWidthEncoder.hpp
others/C++/stegano_project/src/: CommonDefsImpl.cpp  GUI.cpp  Steganography.cpp  ZeroWidthEncoder.cpp  main.cpp
others/C++/text converter/: Makefile
others/C++/text converter/include/: About.hpp  Ascii85Converter.hpp  Base32Converter.hpp  Base64Converter.hpp  BinaryConverter.hpp  CRC32Converter.hpp  Config.hpp  Converter.hpp  HexConverter.hpp  MD5Converter.hpp  MainWindow.hpp  ROT13Converter.hpp  SHA1Converter.hpp  SHA224Converter.hpp  SHA256Converter.hpp  SHA384Converter.hpp  SHA3Converter.hpp  SHA512Converter.hpp  Utils.hpp
others/C++/text converter/src/: Ascii85Converter.cpp  Base32Converter.cpp  Base64Converter.cpp  BinaryConverter.cpp  CRC32Converter.cpp  HexConverter.cpp  MD5Converter.cpp  Main.cpp  MainWindow.cpp  ROT13Converter.cpp  SHA1Converter.cpp  SHA224Converter.cpp  SHA256Converter.cpp  SHA384Converter.cpp  SHA3Converter.cpp  SHA512Converter.cpp  (+1 more)
others/C/System_Information/: Makefile
others/C/hash_value_extractor/: CMakeLists.txt
others/C/hash_value_extractor/include/: hash_calculator.h  string_util.h
others/C/hash_value_extractor/src/: hash_calculator.c  main.c  md5.c  sha256.c  sha512.c  string_util.c
others/C/memory/: Makefile
others/C/video_compression/: Makefile
resource/NetWorkManager/: DevExpress.Data.Desktop.v24.1.xml  DevExpress.Data.v24.1.xml  DevExpress.Drawing.v24.1.xml  DevExpress.Office.v24.1.Core.xml  DevExpress.Pdf.v24.1.Core.xml  DevExpress.Pdf.v24.1.Drawing.xml  DevExpress.Printing.v24.1.Core.xml  DevExpress.RichEdit.v24.1.Core.xml  DevExpress.Sparkline.v24.1.Core.xml  DevExpress.Utils.v24.1.xml  DevExpress.XtraBars.v24.1.xml  DevExpress.XtraEditors.v24.1.xml  DevExpress.XtraGrid.v24.1.xml  DevExpress.XtraLayout.v24.1.xml  DevExpress.XtraPrinting.v24.1.xml  DevExpress.XtraTreeList.v24.1.xml
tools/: Calculator.cs  CalculatorForm.cs  CalculatorToolCard.cs  PathHelper.cs  QrCodeGenerator.cs  image_compressor.cpp  system_cleaner.cpp
tools/NetWorkManager/: NetWorkManager.sln
tools/NetWorkManager/NetWorkManager/: Form1.Designer.cs  Form1.cs  NetWorkManager.csproj  Program.cs  enumInternet.cs
tools/Self_starting_management/: SelfStartingManager.cs  SelfStartingManagerForm.cs  SelfStartingManagerToolCard.cs
tools/ico_extractor/: IconExtractor.cs  IconExtractorConstants.cs  IconExtractorForm.cs  IconExtractorHelper.cs  IconExtractorSettings.cs  IconExtractorToolCard.cs
tools/viewer/: IImageViewer.cs  ImageDisplayForm.cs  ImageFileHandler.cs  ImageViewerForm.cs  ImageViewerToolCard.cs
(+62 files in other folders)
